--- a/src/servidor_web/templates/index.html
+++ b/src/servidor_web/templates/index.html
@@ -7,5 +7,9 @@
 </head>
 <body>
   <h1>Hello World no template</h1>
+
+  <h4>{{ .Id}}</h4>
+  <h4>{{ .Title}}</h4>
+  <h4>{{ .Body}}</h4>
 </body>
 </html>
